
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - New configuration option "Mask" for [Operator] sections to limit OPER
    commands to ussers with a specific IRC mask. Patch from Florian Westphal.
  - Write "error file" (/tmp/ngircd-XXX.err) only if compiled with debug
    code ("--enable-debug") and running as daemon process.
  - Don't create version information string each time a client connects
    but insetead on server startup. By Florian Westphal.
  - New configuration variable "PidFile", section "[Global]": if defined,
    the server writes its process ID (PID) to this file. Default: off.
    Idea of Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Code cleanups from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Raised the maximum length of passwords to 20 characters.
  - Fixed a memory leak when resizing the connection pool and realloc()
    failed. Now we don't fall back to malloc(), which should be sane anyway.
    Patch from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Added support for the Howl (http://www.porchdogsoft.com/products/howl/)
    Rendezvous API, in addition to the API of Apple (Mac OS X). The available
    API will be autodetected when you call "./configure --with-rendezvous".
  - Made ngIRCd compile on HP/UX 10.20 with native HP pre-ANSI C compiler and
    most probably other older C compilers on other systems.
  - When the daemon should switch to another user ID (ServerID is defined in
    the configuration file) and is not running in a chroot environment, it
    changes it's working directory to the home directory of this user. This